lab2 - small fixes